@@ -1308,10 +1308,22 @@ void DCItem::updateFromTemplate(DCObject *src)
 		m_thresholds->add(t);
    }
 
-   expandMacros(item->m_instance, m_instance, MAX_DB_STRING);
+   if ((item->getInstanceDiscoveryMethod() != IDM_NONE) && (m_instanceDiscoveryMethod == IDM_NONE))
+   {
+      expandInstance();
+   }
+   else
+   {
+      expandMacros(item->m_instance, m_instance, MAX_DB_STRING);
+      m_instanceDiscoveryMethod = item->m_instanceDiscoveryMethod;
+      safe_free(m_instanceDiscoveryData);
+	   m_instanceDiscoveryData = (item->m_instanceDiscoveryData != NULL) ? _tcsdup(item->m_instanceDiscoveryData) : NULL;
+      safe_free_and_null(m_instanceFilterSource);
+      delete_and_null(m_instanceFilter);
+      setInstanceFilter(item->m_instanceFilterSource);
+   }
 
    updateCacheSize();
-   
    unlock();
 }
 
